--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cashu",
   "version": "0.0.1",
   "description": "cashu",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +13,7 @@
   },
   "keywords": [
     "nostr",
-    "nostdav",
+    "cashu",
     "app"
   ],
   "author": "Melvin Carvalho",
